# webrtc_runtime

./: CMakeLists.txt  README.md  WebRtcAudioTest.cpp  build_android.sh  main.cpp
WebRTCDemo/: Assembly-CSharp.csproj  WebRTCDemo.sln  WebRTCDemo.userprefs
WebRTCDemo/Assets/: Main.unity
WebRTCDemo/Assets/Plugins/Android/libs/: AndroidManifest.xml
WebRTCDemo/Assets/Plugins/codec.bundle/Contents/: Info.plist
WebRTCDemo/Assets/Plugins/codec.bundle/Contents/MacOS/: codec
WebRTCDemo/Assets/Plugins/iOS/codec/: amr_codec.c  amr_codec.h  codec_def.h  interf_dec.h  interf_enc.h  typedef.h
WebRTCDemo/Assets/Plugins/webrtc.bundle/Contents/: Info.plist
WebRTCDemo/Assets/Plugins/webrtc.bundle/Contents/MacOS/: webrtc
WebRTCDemo/Assets/Scripts/: IChatManager.cs  Main.cs
WebRTCDemo/Assets/Scripts/chat/: AudioStream.cs  ChatManager.cs
WebRTCDemo/Assets/Scripts/chat/audio/: AudioDefine.cs  AudioLoopRecord.cs  AudioOnceRecord.cs  AudioProcessing.cs  AudioProcessingDll.cs  AudioRecord.cs  IRecord.cs
WebRTCDemo/Assets/Scripts/chat/tool/: AudioVisualization.cs  CustomLine.cs
WebRTCDemo/ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  ProjectSettings.asset
android/jni/: Android.mk  Application.mk  build_arm_v7.sh  build_x86.sh
webrtc/: common_types.cc  webrtc.cc
webrtc/codec/: codec_def.h  interf_dec.c  sp_dec.c  sp_enc.c
webrtc/rtc_base/: checks.cc  event_tracer.cc  logging.cc  platform_thread.cc  stringutils.h
webrtc/system_wrappers/source/: trace_posix.cc
